--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>湖南华晟会计师事务所</title>
-    <link rel="stylesheet" href=${appPath} + "/layui/css/layui.css">
+    <link rel="stylesheet" href="/layui/css/layui.css">
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <style type="text/css">
@@ -85,8 +85,8 @@
 
 <body>
 
-    <script src=${appPath} + "/layui/layui.js"></script>
-    <script src=${appPath} + "/js/jquery.min.js"></script>
+    <script src="/layui/layui.js"></script>
+    <script src="/js/jquery.min.js"></script>
 
     <!--导航条-->
     <ul class="layui-nav " lay-filter="" style="width:1440px;text-align: center;margin: 0 auto;">
@@ -158,16 +158,16 @@
 
                 <div carousel-item>
                     <div style="text-align: center;">
-                        <img src="img/banner1.jpg" style="width: 1440px;">
+                        <img src="/img/banner1.jpg" style="width: 1440px;">
                     </div>
                     <div style="text-align: center;">
-                        <img src="img/banner2.jpg" style="width: 1440px;">
+                        <img src="/img/banner2.jpg" style="width: 1440px;">
                     </div>
                     <div style="text-align: center;">
-                        <img src="img/banner3.jpg" style="width: 1440px;">
+                        <img src="/img/banner3.jpg" style="width: 1440px;">
                     </div>
                     <div style="text-align: center;">
-                        <img src="img/banner4.jpg" style="width: 1440px;">
+                        <img src="/img/banner4.jpg" style="width: 1440px;">
                     </div>
                 </div>
             </div>
@@ -207,8 +207,7 @@
                     </div>
                 </div>
 
-                <div class="layui-col-md9 layui-col-xs9" v-for="work in works">
-                    <div class="layui-col-md3 layui-col-xs3">
+                    <div class="layui-col-md3 layui-col-xs3" v-for="work in works">
                         <div class="grid-demo grid-demo-bg1">
                             <div class="kcjywStyle">
                                 <div style="padding-top:60px">
@@ -218,7 +217,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
 
             </div>
         </div>
@@ -271,7 +269,7 @@
                         <div class="layui-col-md2">
                             <a href="#">
                                 <div class="box jdanbStyle">
-                                    <img src="img/ClassicCase1.jpg" style="width: 250px;"><br>
+                                    <img src="/img/ClassicCase1.jpg" style="width: 250px;"><br>
                                     工商事务记账报税
                                 </div>
                                 <style>
@@ -290,7 +288,7 @@
                         <div class="layui-col-md2 layui-col-md-offset4">
                             <a href="#">
                                 <div class="box jdanbStyle">
-                                    <img src="img/ClassicCase2.jpg" style="width: 250px;"><br>
+                                    <img src="/img/ClassicCase2.jpg" style="width: 250px;"><br>
                                     商标专利知识产权
                                 </div>
                                 <style>
@@ -308,7 +306,7 @@
                         <div class="layui-col-md2 layui-col-md-offset3">
                             <a href="#">
                                 <div class="box jdanbStyle">
-                                    <img src="img/ClassicCase3.jpg" style="width: 250px;"><br>
+                                    <img src="/img/ClassicCase3.jpg" style="width: 250px;"><br>
                                     注册会计师
                                 </div>
                                 <style>
@@ -326,7 +324,7 @@
                         <div class="layui-col-md2 layui-col-md-offset4">
                             <a href="#">
                                 <div class="box jdanbStyle">
-                                    <img src="img/ClassicCase4.jpg" style="width: 250px;"><br>
+                                    <img src="/img/ClassicCase4.jpg" style="width: 250px;"><br>
                                     注册税务师
                                 </div>
                                 <style>
@@ -356,7 +354,7 @@
                         <div class="layui-col-md3 layui-col-md-offset2 grid-demo-bg1">
                             <a href="#">
                                 <div class="box clzalbStyle">
-                                    <img src="img/CaseInProcess1.jpg" style="width: 250px;"><br>
+                                    <img src="/img/CaseInProcess1.jpg" style="width: 250px;"><br>
                                     处理中案例一
                                 </div>
                                 <style>
@@ -374,7 +372,7 @@
                         <div class="layui-col-md3 layui-col-md-offset3">
                             <a href="#">
                                 <div class="box clzalbStyle">
-                                    <img src="img/CaseInProcess2.jpg" style="width: 250px;"><br>
+                                    <img src="/img/CaseInProcess2.jpg" style="width: 250px;"><br>
                                     处理中案例二
                                 </div>
                                 <style>
@@ -393,7 +391,7 @@
                             <a href="#">
                                 <div class="box clzalbStyle">
                                     处理中案例三<br>
-                                    <img src="img/CaseInProcess3.jpg" style="width: 250px;">
+                                    <img src="/img/CaseInProcess3.jpg" style="width: 250px;">
                                 </div>
                                 <style>
                                     .box {
@@ -446,7 +444,7 @@
                                     <div class="layui-col-md2">
                                         <a href="#">
                                             <div class="box jdanbStyle">
-                                                <img src="img/people1.jpg" style="width: 250px;height: 220px;">
+                                                <img src="/img/people1.jpg" style="width: 250px;height: 220px;">
                                                 <br>
                                                 会计师1
                                             </div>
@@ -466,7 +464,7 @@
                                     <div class="layui-col-md2 layui-col-md-offset4">
                                         <a href="#">
                                             <div class="box jdanbStyle" style="margin-left: 190px;">
-                                                <img src="img/people2.jpg" style="width: 250px;height: 220px;">
+                                                <img src="/img/people2.jpg" style="width: 250px;height: 220px;">
                                                 <br>
                                                 会计师2
                                             </div>
@@ -486,7 +484,7 @@
                                     <div class="layui-col-md2 layui-col-md-offset4">
                                         <a href="#">
                                             <div class="box jdanbStyle" style="margin-top: 20px; margin-left: 30px;">
-                                                <img src="img/people3.jpg" style="width: 250px;height: 220px;">
+                                                <img src="/img/people3.jpg" style="width: 250px;height: 220px;">
                                                 <br>
                                                 会计师3
                                             </div>
@@ -558,7 +556,7 @@
     </div>
 
 
-    <script src=${appPath} + "/js/jquery.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
     <ul class="layui-fixbar">
         <li class="layui-icon" lay-type="bar1" id="msg">
             
@@ -576,7 +574,7 @@
     </script>
 
 
-    <script src="layui/lay/modules/layer.js"></script>
+    <script src="/layui/lay/modules/layer.js"></script>
     <script>
         //弹出一个页面层
         $('#msg').on('click', function () {
