修改文件引用

--- a/peopleIntro.html
+++ b/peopleIntro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>会计师介绍</title>
 
-    <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="stylesheet" href="/layui/css/layui.css">
 
     <style type="text/css">
         /**
@@ -85,7 +85,7 @@
 </head>
 <body>
 
-<script src="layui/layui.js"></script>
+<script src="/layui/layui.js"></script>
 
 <!--导航条-->
 <div class="layui-header">
@@ -174,7 +174,7 @@
                 <h5>简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h5>
             </div>
             <div class="boxr">
-                <img src="img/people1.jpg" style="width: 250px;">
+                <img src="/img/people1.jpg" style="width: 250px;">
             </div>
         </div>
         
@@ -184,4 +184,4 @@
 </body>
 </html>
 
-<script src="static/script/jquery.min.js"></script>
+<script src="/js/jquery.min.js"></script>
