--- a/businessScope.html
+++ b/businessScope.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>业务范围</title>
 
-    <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="stylesheet" href="/layui/css/layui.css">
 
     <style type="text/css">
         /**
@@ -85,7 +85,7 @@
 </head>
 <body>
 
-<script src="layui/layui.js"></script>
+<script src="/layui/layui.js"></script>
 
 <!--导航条-->
 <div class="layui-header">
@@ -166,7 +166,7 @@
         </ul>
 
     <div style="background-color:#EEEEEE;height:500px;margin-top: 20px;margin-left: 220px">
-        <img src="img/caseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
+        <img src="/img/caseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
         <h1 style="padding: 20px"> 审计</h1>
         <div style="text-align: left">
             <h3>
@@ -206,7 +206,7 @@
                 <h5>简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h5>
             </div>
             <div class="boxr">
-                <img src="img/people1.jpg" style="width: 250px;">
+                <img src="/img/people1.jpg" style="width: 250px;">
             </div>
         </div>
 
@@ -218,4 +218,4 @@
 </body>
 </html>
 
-<script src="static/script/jquery.min.js"></script>
+<script src="/js/jquery.min.js"></script>
