--- a/caseInProcess2.html
+++ b/caseInProcess2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>处理中案例</title>
 
-    <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="stylesheet" href="/layui/css/layui.css">
 
     <style type="text/css">
         /**
@@ -85,7 +85,7 @@
 </head>
 <body>
 
-<script src="layui/layui.js"></script>
+<script src="/layui/layui.js"></script>
 
 <!--导航条-->
 <div class="layui-header">
@@ -174,7 +174,7 @@
                 <h5>简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h5>
             </div>
             <div class="boxr">
-                <img src="img/Classic.jpg" style="width: 250px;">
+                <img src="/img/Classic.jpg" style="width: 250px;">
             </div>
         </div>
         <hr>
@@ -184,7 +184,7 @@
                 <h5>简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h5>
             </div>
             <div class="boxr">
-                <img src="img/Classic.jpg" style="width: 250px;">
+                <img src="/img/Classic.jpg" style="width: 250px;">
             </div>
         </div>
         <hr>
@@ -194,7 +194,7 @@
                 <h5>简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h5>
             </div>
             <div class="boxr">
-                <img src="img/Classic.jpg" style="width: 250px;">
+                <img src="/img/Classic.jpg" style="width: 250px;">
             </div>
         </div>
         <hr>
@@ -204,7 +204,7 @@
                 <h5>简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h5>
             </div>
             <div class="boxr">
-                <img src="img/Classic.jpg" style="width: 250px;">
+                <img src="/img/Classic.jpg" style="width: 250px;">
             </div>
         </div>
         <nav style="text-align: center;padding: 30px;">
@@ -227,4 +227,4 @@
 </body>
 </html>
 
-<script src="static/script/jquery.min.js"></script>
+<script src="/js/jquery.min.js"></script>
