Classic Case Second And Third Page

--- a/thirdClassic.html
+++ b/thirdClassic.html
@@ -45,7 +45,6 @@
         }
 
         .container{
-            text-align: left;
             width:1200px;
             height: 200px;
         }
@@ -168,61 +167,23 @@
             <hr class="layui-bg-black"style="margin:0 auto">
         </ul>
 
-    <div style="background-color:#EEEEEE;height:1000px;margin-top: 20px;margin-left: 220px">
-        <div class="container">
-            <div class="boxl" style="margin-top: 20px">
-                <h2>经典案例1</h2><br \>
-                <h3 style="text-align: left;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h3>
-            </div>
-            <div class="boxr">
-                <img src="img/Classic.jpg" style="width: 350px;">
-            </div>
-        </div>
-        <br>
-        <div class="container">
-            <div class="boxl" style="margin-top: 20px">
-                <h2>经典案例1</h2><br \>
-                <h3 style="text-align: left;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h3>
-
-            </div>
-            <div class="boxr">
-                <img src="img/Classic.jpg" style="width: 350px;">
-            </div>
-        </div>
-        <br>
-        <div class="container">
-            <div class="boxl" style="margin-top: 20px">
-                <h2>经典案例1</h2><br \>
-                <h3 style="text-align: left;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h3>
-            </div>
-            <div class="boxr">
-                <img src="img/Classic.jpg" style="width: 350px;">
-            </div>
-        </div>
-        <br>
-        <div class="container">
-            <div class="boxl" style="margin-top: 20px">
-                <h2>经典案例1</h2><br \>
-                <h3 style="text-align: left;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h3>
-            </div>
-            <div class="boxr">
-                <img src="img/Classic.jpg" style="width: 350px;">
-            </div>
-        </div>
-        <nav style="text-align: center;padding: 30px;">
-            <ul class="pagination">
-            <li><a href="#">«</a></li>
-            <li><a href="#">1</a></li>
-            <li><a class="active" href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">6</a></li>
-            <li><a href="#">7</a></li>
-            <li><a href="#">»</a></li>
-            </ul>
-        </nav>
-
+    <div style="background-color:#EEEEEE;height:500px;margin-top: 20px;margin-left: 220px">
+        <img src="img/Classic.jpg" style="float:left;margin: 20px 20px;width:300px">
+        <h1 style="padding: 20px">案例名称</h1>
+        <div style="text-align: left">
+            <h3>
+            案例一：被告人邢某于1996年6月27日将从中国农业某银行开具的999万元人民币虚假进账单提供给某审计师事务所，骗取了虚假的验资报告，
+            并依此报告从工商行政管理部门办理了烟台市三木物资有限公司的注册登记手续，领取了营业执照。
+            事发后，邢某因涉嫌虚报注册资本罪被立案侦查，并于1999年2月24 日被烟台市莱山区人民检察院提起公诉，以虚报注册资本罪判处有期徒刑1年6个月，并处罚金30万元。
+            </h3>
+            <h3>
+            我国刑法在有关公司注册资本方面规定了两条罪名：虚报注册资本罪和虚假出资。抽逃资本罪。其中前者体现在刑法第158条：虚报注册资本罪，
+            是指行为人使用虚假证明文件或者采取其他欺骗手段，虚报注册资本，欺骗公司登记主管部门取得公司登记，虚报注册资本数额巨大。
+            后果严重或者有其他严重情节的行为；后者体现在刑法第159条：虚假出资、抽逃资本罪，是指公司发起人。股东违反公司法规定，未交付货币。
+            实物或者未转移财产所有权，虚假出资，或者在公司成立后又抽逃其出资，数额巨大。后果严重或者有其他严重情节的行为。邢某的行为触犯了刑法第158条，构成了虚报注册资本罪。
+            在此案中，一个比较关键的因素是某审计师事务所出具了虚假的验资报告。验资报告，在公司登记注册过程中是一个不可缺少的文件。
+            审计师事务所因为出具虚假验资报告而承担刑事责任的案例不多见，但是审计师事务所因为出具虚假验资报告而被法院判令承担民享责任的却是比比皆是。    
+            </h3>
         </div>
     </div>
 </div>
