--- a/caseInProcess3.html
+++ b/caseInProcess3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>处理中案例</title>
 
-    <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="stylesheet" href="/layui/css/layui.css">
 
     <style type="text/css">
         /**
@@ -87,7 +87,7 @@
 </head>
 <body>
 
-<script src="layui/layui.js"></script>
+<script src="/layui/layui.js"></script>
 
 <!--导航条-->
 <div class="layui-header">
@@ -155,7 +155,7 @@
                 案例类型
             </div>
             <hr class="layui-bg-black" style="margin:0 auto">
-            <li class="layui-nav-item"  ><a href="">类型1</a></li>
+            <li class="layui-nav-item"><a href="">类型1</a></li>
             <hr class="layui-bg-black" style="margin:0 auto">
             <li class="layui-nav-item"><a href="">类型2</a></li>
             <hr class="layui-bg-black"style="margin:0 auto">
