修改导航栏错误引用

--- a/businessScope.html
+++ b/businessScope.html
@@ -110,25 +110,25 @@
             </a>
         </li>
         <li class="layui-nav-item">
-            <a href="./peopleIntro.html"  class ="dhlStyle">
-                <i class="layui-icon layui-icon-username iconStyle" ></i>
+            <a href="./secondPeople.html" class="dhlStyle">
+                <i class="layui-icon layui-icon-username iconStyle"></i>
                 会计师介绍
             </a>
         </li>
         <li class="layui-nav-item">
-            <a href="./caseInProcess2.html"  class ="dhlStyle">
+            <a href="./secondClassic.html"  class ="dhlStyle">
                 <i class="layui-icon layui-icon-note iconStyle" ></i>
                 经典案例
             </a>
         </li>
         <li class="layui-nav-item">
-            <a href="./secondClassic.html"  class ="dhlStyle">
+            <a href="./caseInProcess2.html"  class ="dhlStyle">
                 <i class="layui-icon layui-icon-survey iconStyle" ></i>
                 处理中案例
             </a>
         </li>
         <li class="layui-nav-item">
-            <a href=""  class ="dhlStyle">
+            <a href="./contactInfo.html"  class ="dhlStyle">
                 <i class="layui-icon layui-icon-dialogue iconStyle" ></i>
                 联系我们
             </a>
