--- a/caseInProcess2.html
+++ b/caseInProcess2.html
@@ -113,8 +113,8 @@
             </a>
         </li>
         <li class="layui-nav-item">
-            <a href="./peopleIntro.html"  class ="dhlStyle">
-                <i class="layui-icon layui-icon-username iconStyle" ></i>
+            <a href="./secondPeople.html" class="dhlStyle">
+                <i class="layui-icon layui-icon-username iconStyle"></i>
                 会计师介绍
             </a>
         </li>
@@ -124,14 +124,14 @@
                 经典案例
             </a>
         </li>
-        <li class="layui-nav-item layui-this">
+        <li class="layui-nav-item">
             <a href="./caseInProcess2.html"  class ="dhlStyle">
                 <i class="layui-icon layui-icon-survey iconStyle" ></i>
                 处理中案例
             </a>
         </li>
         <li class="layui-nav-item">
-            <a href=""  class ="dhlStyle">
+            <a href="./contactInfo.html"  class ="dhlStyle">
                 <i class="layui-icon layui-icon-dialogue iconStyle" ></i>
                 联系我们
             </a>
