--- a/main.html
+++ b/main.html
@@ -127,7 +127,7 @@
             </a>
         </li>
         <li class="layui-nav-item">
-            <a href="" class="dhlStyle">
+            <a href="./contactInfo.html" class="dhlStyle">
                 <i class="layui-icon layui-icon-dialogue iconStyle"></i>
                 联系我们
             </a>
@@ -483,7 +483,7 @@
                     <div class="layui-row grid-demo grid-demo-bg1">
                         <div class="layui-col-md3" >
                             <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="/contactInfo.html">
+                                <a href="./thirdInfo_addr.html">
                                     <i class="layui-icon layui-icon-location"
                                         style="font-size: 50px; color: #1E9FFF;"></i> <br>
                                     <div class="clzalaStyle" style="height: 100%;"> 
@@ -494,7 +494,7 @@
                         </div>
                         <div class="layui-col-md3" >
                             <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="/contactInfo.html">
+                                <a href="./thirdInfo_email.html">
                                     <i class="layui-icon layui-icon-email"
                                         style="font-size: 50px; color: #1E9FFF;"></i>
                                     <br>
@@ -506,7 +506,7 @@
                         </div>
                         <div class="layui-col-md3" >
                             <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="/contactInfo.html">
+                                <a href="./thirdInfo_tel.html">
                                     <i class="layui-icon layui-icon-service"
                                         style="font-size: 50px; color: #1E9FFF;"></i>
                                     <br>
@@ -518,7 +518,7 @@
                         </div>
                         <div class="layui-col-md3" >
                             <div class="layui-row" style="text-align: center;padding: 12%;">
-                                <a href="/contactInfo.html">
+                                <a href="./thirdInfo_qq.html">
                                     <i class="layui-icon layui-icon-login-qq"
                                         style="font-size: 50px; color: #1E9FFF;"></i>
                                     <br>
@@ -532,7 +532,6 @@
 
                 </div>
             </div>
-        
     </div>
 
 
