--- a/thirdInfo_email.html
+++ b/thirdInfo_email.html
@@ -154,7 +154,7 @@
     <ul class="layui-nav layui-nav-tree"  lay-filter="test"style="float:left;text-align:center;margin:0 auto;background-color: #FFFFFF" >
         <div style="text-align:center; font-size: 25px;color: #0C0C0C;margin:20px 0px;">
             <i class="layui-icon layui-icon-username" style="font-size: 30px; "></i>
-            联系我们
+            电子邮箱
         </div>
         <hr class="layui-bg-black" style="margin:0 auto">
         <li class="layui-nav-item"  ><a href="./thirdInfo_addr.html">地址</a></li>
@@ -171,19 +171,16 @@
 
     <div style="background-color:#EEEEEE;height:500px;margin-top: 20px;margin-left: 220px">
         <img src="img/caseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
-        <h1 style="padding: 20px"> 地址</h1>
+        <h1 style="padding: 20px"> Email </h1>
         <div style="text-align: left">
             <h3>
-                湖南大学位于中国历史文化名城长沙，校区坐落在湘江之滨、岳麓山下，享有“千年学府，百年名校”之誉。学校办学历史悠久、
-                教育传统优良，是教育部直属全国重点大学、国家“211工程”“985工程”重点建设高校、国家“世界一流大学”建设高校。
+                Email:XXXX@hnu.edu.cn
             </h3>
             <h3>
 
             </h3>
             <h3>
-                湖南大学办学起源于公元976年创建的岳麓书院，历经宋、元、明、清等朝代的变迁，始终保持着文化教育教学的连续性。1903年
-                改制为湖南高等学堂，1926年定名为湖南大学，1937年成为国民政府教育部16所国立大学之一。中华人民共和国成立后，中共“一大”代表、
-                教育家李达任新中国第一任湖南大学校长，毛泽东同志亲笔题写校名。2000年，湖南大学与湖南财经学院合并组建成新的湖南大学。
+                
             </h3>
 
 
