前端格式修改

--- a/caseInProcess3.html
+++ b/caseInProcess3.html
@@ -89,7 +89,7 @@
 
 <script src="/layui/layui.js"></script>
 
-<div style="width:1440px;text-align: center;margin: 0 auto;">
+<div style="width:90%;text-align: center;margin: 0 auto;">
         <ul class="layui-nav layui-nav-tree"  lay-filter="test"style="float:left;text-align:center;margin:0 auto;background-color: #FFFFFF" >
             <div style="text-align:center; font-size: 25px;color: #0C0C0C;margin:20px 0px;">
                 <i class="layui-icon layui-icon-read" style="font-size: 30px; "></i>
