--- a/peopleIntro.html
+++ b/peopleIntro.html
@@ -90,7 +90,7 @@
 <div class="layui-side layui-bg-black">
     <div class="layui-side-scroll">
       <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-      <ul class="layui-nav layui-nav-tree"  lay-filter="test">
+      <ul class="layui-nav layui-nav-tree layui-nav-side"  lay-filter="test">
         <li class="layui-nav-item layui-nav-itemed">
             <div style="text-align:center;background-color:#1E9FFF;padding-top: 70px">
                 <!-- <i class="layui-icon layui-icon-face-smile" style="font-size: 30px; color: #1E9FFF;"></i> -->
