--- a/secondPeople.html
+++ b/secondPeople.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>会计师介绍</title>
 
-    <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="layui/css/layui.css">
 
     <style type="text/css">
         /**
@@ -90,24 +90,25 @@
 
 <script src="/layui/layui.js"></script>
 
-<div style="width:100%;text-align: center;margin: 0 auto;">
-        <ul class="layui-nav layui-nav-tree"  lay-filter="test"style="float:left;text-align:center;margin:0 auto;background-color: #FFFFFF" >
-            <div style="text-align:center; font-size: 25px;color: #0C0C0C;margin:20px 0px;">
-                <i class="layui-icon layui-icon-read" style="font-size: 30px; "></i>
-                会计师介绍
-            </div>
-            <hr class="layui-bg-black" style="margin:0 auto">
-            <li class="layui-nav-item"  ><a href="">会计师种类1</a></li>
-            <hr class="layui-bg-black" style="margin:0 auto">
-            <li class="layui-nav-item"><a href="">会计师种类2</a></li>
-            <hr class="layui-bg-black"style="margin:0 auto">
-            <li class="layui-nav-item"><a href="">会计师种类3</a></li>
-            <hr class="layui-bg-black"style="margin:0 auto">
-            <li class="layui-nav-item"><a href="">会计师种类4</a></li>
-            <hr class="layui-bg-black"style="margin:0 auto">
-            <li class="layui-nav-item"><a href="">会计师种类5</a></li>
-            <hr class="layui-bg-black"style="margin:0 auto">
-        </ul>
+<div style="width:90%;text-align: center;margin: 0 auto;">
+
+		<ul class="layui-nav layui-nav-tree layui-nav-side"  lay-filter="test"style="float:left;text-align:center;margin:0 auto;background-color: #FFFFFF" >
+		  <div style="text-align:center; font-size: 25px;color: #0C0C0C;margin:20px 0px;">
+		      <i class="layui-icon layui-icon-username" style="font-size: 30px; "></i>
+		       会计师介绍
+		  </div>
+		 <hr class="layui-bg-black" style="margin:0 auto">
+		 <li class="layui-nav-item"  ><a href="">会计师种类1</a></li>
+		 <hr class="layui-bg-black" style="margin:0 auto">
+		 <li class="layui-nav-item"><a href="">会计师种类2</a></li>
+		 <hr class="layui-bg-black"style="margin:0 auto">
+		 <li class="layui-nav-item"><a href="">会计师种类3</a></li>
+		 <hr class="layui-bg-black"style="margin:0 auto">
+		 <li class="layui-nav-item"><a href="">会计师种类4</a></li>
+		 <hr class="layui-bg-black"style="margin:0 auto">
+		 <li class="layui-nav-item"><a href="">会计师种类5</a></li>
+		 <hr class="layui-bg-black"style="margin:0 auto">
+		</ul>
 
     <div style="background-color:#EEEEEE;height:1000px;margin-top: 20px;margin-left: 220px">
         <div class="container">
