--- a/thirdInfo_addr.html
+++ b/thirdInfo_addr.html
@@ -91,25 +91,7 @@
 <script src="layui/layui.js"></script>
 
 
-<div style="width:1440px;text-align: center;margin: 0 auto;">
-
-    <ul class="layui-nav layui-nav-tree"  lay-filter="test"style="float:left;text-align:center;margin:0 auto;background-color: #FFFFFF" >
-        <div style="text-align:center; font-size: 25px;color: #0C0C0C;margin:20px 0px;">
-            <i class="layui-icon layui-icon-username" style="font-size: 30px; "></i>
-            地址
-        </div>
-        <hr class="layui-bg-black" style="margin:0 auto">
-        <li class="layui-nav-item"  ><a href="./thirdInfo_addr.html">地址</a></li>
-        <hr class="layui-bg-black" style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_email.html">电子邮箱</a></li>
-        <hr class="layui-bg-black"style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_tel.html">联系电话</a></li>
-        <hr class="layui-bg-black"style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_qq.html">QQ/微信</a></li>
-        <hr class="layui-bg-black"style="margin:0 auto">
-
-
-    </ul>
+<div style="width:100%;text-align: center;margin: 0 auto;">
 
     <div style="background-color:#EEEEEE;height:500px;margin-top: 20px;margin-left: 220px">
         <img src="img/caseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
