--- a/contactInfo.html
+++ b/contactInfo.html
@@ -90,46 +90,42 @@
 
 <script src="layui/layui.js"></script>
 
-<div style="width:1440px;text-align: center;margin: 0 auto;">
-
-    <ul class="layui-nav layui-nav-tree"  lay-filter="test"style="float:left;text-align:center;margin:0 auto;background-color: #FFFFFF" >
+<div style="width:90%;text-align: center;margin: 0 auto;">
+	
+    <ul class="layui-nav layui-nav-tree layui-nav-side"  lay-filter="test"
+				style="text-align:center;margin:0 auto;background-color: #FFFFFF" >
         <div style="text-align:center; font-size: 25px;color: #0C0C0C;margin:20px 0px;">
             <i class="layui-icon layui-icon-username" style="font-size: 30px; "></i>
             联系我们
         </div>
         <hr class="layui-bg-black" style="margin:0 auto">
-        <li class="layui-nav-item"  ><a href="./thirdInfo_addr.html">地址</a></li>
+        <li class="layui-nav-item"   ><a href="./thirdInfo_addr.html" target="contactIframe">地址</a></li>
         <hr class="layui-bg-black" style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_email.html">电子邮箱</a></li>
+        <li class="layui-nav-item"><a href="./thirdInfo_email.html"target="contactIframe">电子邮箱</a></li>
         <hr class="layui-bg-black"style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_tel.html">联系电话</a></li>
+        <li class="layui-nav-item"><a href="./thirdInfo_tel.html"target="contactIframe">联系电话</a></li>
         <hr class="layui-bg-black"style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_qq.html">QQ/微信</a></li>
+        <li class="layui-nav-item"><a href="./thirdInfo_qq.html"target="contactIframe">QQ/微信</a></li>
         <hr class="layui-bg-black"style="margin:0 auto">
 
 
     </ul>
 
-    <div style="background-color:#EEEEEE;height:500px;margin-top: 20px;margin-left: 220px">
-        <img src="img/caseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
-        <h1 style="padding: 20px"> 地址</h1>
-        <div style="text-align: left">
-            <h3>
-                湖南大学位于中国历史文化名城长沙，校区坐落在湘江之滨、岳麓山下，享有“千年学府，百年名校”之誉。学校办学历史悠久、
-                教育传统优良，是教育部直属全国重点大学、国家“211工程”“985工程”重点建设高校、国家“世界一流大学”建设高校。
-            </h3>
-            <h3>
+    <div  style="height:90vh;margin:0 auto;text-align: center;">
 
-            </h3>
-            <h3>
-                湖南大学办学起源于公元976年创建的岳麓书院，历经宋、元、明、清等朝代的变迁，始终保持着文化教育教学的连续性。1903年
-                改制为湖南高等学堂，1926年定名为湖南大学，1937年成为国民政府教育部16所国立大学之一。中华人民共和国成立后，中共“一大”代表、
-                教育家李达任新中国第一任湖南大学校长，毛泽东同志亲笔题写校名。2000年，湖南大学与湖南财经学院合并组建成新的湖南大学。
-            </h3>
-
-
-        </div>
+        <!-- css样式overflow:hidden表示溢出隐藏 -->
+       <iframe src="./thirdInfo_addr.html" name="contactIframe" marginwidth="0" marginheight="0" scrolling="yes"
+            frameborder="0" height="100%" width="100%" >
+            
+        </iframe>
+        <!-- scrolling="yes"表示在iframe中显示滚动条 -->
+        <!-- frameborder="0"规定不显示框架周围的边框 -->
+        <!-- marginheight="1"定义iframe的顶部和底部的边距为1 -->
+        <!-- marginwidth="1"定义iframe的左侧和右侧的边距为1 -->
+        <!-- src=""规定在iframe中显示的文档的URL,最初显示的是系统首页 -->
     </div>
+
+
 </div>
 
 
