--- a/main.html
+++ b/main.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>湖南华晟会计师事务所</title>
-    <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="layui/css/layui.css">
+	<link rel="stylesheet" href="layui/css/modules/layer/default/layer.css">
+	<script src="layui/layui.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="layui/lay/modules/layer.js"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script> 
     <style type="text/css">
         /**
          * @Description Layui内置导航栏修改样式
@@ -82,28 +86,27 @@
     </style>
 </head>
 
-<body>
-    <script src="/layui/layui.js"></script>
-    <script src="/js/jquery.min.js"></script>
+<body style="width:90%;margin: 0 auto;text-align: center;">
+
     <div>
         <!-- 轮播图  -->
-        <div style="text-align: center;width: 100%;">
-            <div style="text-align: center;width:1440px;margin: 0 auto">
+        <div style="text-align: center;width: 100%;margin: 0 auto;text-align: center;">
+            <div style="text-align: center;width:100%;margin: 0 auto">
                 <div class="layui-carousel" id="test1" lay-anim lay-indicator="inside" lay-arrow="always"
                     style="text-align: center;margin-top:10px;width:100%;">
 
                     <div carousel-item>
                         <div style="text-align: center;">
-                            <img src="/img/banner1.jpg" style="width: 1440px;">
+                            <img src="img/banner1.jpg" style="width: 100%;">
                         </div>
                         <div style="text-align: center;">
-                            <img src="/img/banner2.jpg" style="width: 1440px;">
+                            <img src="img/banner2.jpg" style="width: 100%;">
                         </div>
                         <div style="text-align: center;">
-                            <img src="/img/banner3.jpg" style="width: 1440px;">
+                            <img src="img/banner3.jpg" style="width: 100%;">
                         </div>
                         <div style="text-align: center;">
-                            <img src="/img/banner4.jpg" style="width: 1440px;">
+                            <img src="img/banner4.jpg" style="width: 100%;">
                         </div>
                     </div>
                 </div>
@@ -126,8 +129,10 @@
         </script>
 
 
+
+
         <!-- 业务范围-->
-        <div class="layui-card layui-bg-black" style="width:1440px;border: #9F9F9F;margin:20px auto;text-align: center;"
+        <div class="layui-card layui-bg-black" style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;"
             id="workToShow">
             <div style="box-shadow: 10px 10px 5px #888888;">
                 <div class="layui-row">
@@ -185,7 +190,7 @@
         </script>
 
         <!-- 经典案例 -->
-        <div class="layui-card" style="width:1440px;border: #9F9F9F;margin:20px auto;text-align: center;"
+        <div class="layui-card" style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;"
             id="caseToShow">
             <div style="box-shadow: 10px 10px 5px #888888;">
                 <div class="layui-row">
@@ -260,7 +265,7 @@
 
         <!-- 处理中案例 -->
         <div class="layui-card layui-bg-black"
-            style="width:1440px;border: #9F9F9F;margin:20px auto;text-align: center;">
+            style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;">
             <div style="box-shadow: 10px 10px 5px #888888;">
                 <div class="layui-row">
                     <div class="layui-col-md9">
@@ -269,7 +274,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset2">
                                     <a href="#">
                                         <div class="box clzalbStyle">
-                                            <img src="/img/CaseInProcess1.jpg" style="width: 250px;"><br>
+                                            <img src="img/CaseInProcess1.jpg" style="width: 250px;"><br>
                                             处理中案例一
                                         </div>
                                         <style>
@@ -287,7 +292,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset3">
                                     <a href="#">
                                         <div class="box clzalbStyle">
-                                            <img src="/img/CaseInProcess2.jpg" style="width: 250px;"><br>
+                                            <img src="img/CaseInProcess2.jpg" style="width: 250px;"><br>
                                             处理中案例二
                                         </div>
                                         <style>
@@ -305,7 +310,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset5">
                                     <a href="#">
                                         <div class="box clzalbStyle">
-                                            <img src="/img/CaseInProcess3.jpg" style="width: 250px; height: 190px;"><br>
+                                            <img src="img/CaseInProcess3.jpg" style="width: 250px; height: 190px;"><br>
                                             处理中案例三
                                         </div>
                                         <style>
@@ -338,7 +343,7 @@
         </div>
 
         <!-- 会计师介绍 -->
-        <div class="layui-card" style="width:1440px;border: #9F9F9F;margin:20px auto;text-align: center;">
+        <div class="layui-card" style="width:100%;border: #9F9F9F;margin:20px auto;text-align: center;">
             <div style="box-shadow: 10px 10px 5px #888888;">
                 <div class="layui-row">
                     <div class="layui-col-md3">
@@ -357,7 +362,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset2">
                                     <a href="#">
                                         <div class="box jdanbStyle">
-                                            <img src="/img/people1.jpg" style="width: 250px;"><br>
+                                            <img src="img/people1.jpg" style="width: 250px;"><br>
                                             会计师1
                                         </div>
                                         <style>
@@ -375,7 +380,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset3">
                                     <a href="#">
                                         <div class="box jdanbStyle">
-                                            <img src="/img/people2.jpg" style="width: 250px;"><br>
+                                            <img src="img/people2.jpg" style="width: 250px;"><br>
                                             会计师2
                                         </div>
                                         <style>
@@ -393,7 +398,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset5">
                                     <a href="#">
                                         <div class="box jdanbStyle">
-                                            <img src="/img/people3.jpg" style="width: 250px;">
+                                            <img src="img/people3.jpg" style="width: 250px;">
                                             <br>
                                             会计师3
                                         </div>
@@ -419,7 +424,7 @@
 
         <!-- 尾部信息 -->
         <div class="layui-card layui-bg-black"
-            style="width:1440px; height: 150px; border: #9F9F9F;margin:20px auto;text-align: center;">
+            style="width:100%; height: 150px; border: #9F9F9F;margin:20px auto;text-align: center;">
 
             <div class="layui-row">
                 <div class="layui-col-md8 layui-col-md-offset2">
@@ -478,7 +483,6 @@
 
     </div>
 
-    <script src="/js/jquery.min.js"></script>
     <ul class="layui-fixbar">
         <li class="layui-icon" lay-type="bar1" id="msg">
             
@@ -496,16 +500,18 @@
     </script>
 
 
-    <script src="/layui/lay/modules/layer.js"></script>
     <script>
         //弹出一个页面层
         $('#msg').on('click', function () {
-            var layer = layui.layer;
-            layer.open({
+            var layer1 = layui.layer;
+            layer1.open({
                 type: 1,
                 area: ['500px', '385px'],
                 shadeClose: true, //点击遮罩关闭
-                content: '\<\div style="padding:20px;"><textarea  rows="10" cols="60">你好</textarea><textarea  rows="3" cols="60" style="margin-top: 10px">请输入问题</textarea><\/div>',
+                content: '\<\div style="padding:20px;">'+
+								'<textarea  rows="10" cols="60">你好<\/textarea>'+
+								'<textarea  rows="3" cols="60" style="margin-top: 10px">请输入问题<\/textarea>'+
+								'<\/div>',
                 btn: ['发送', '关闭'],
                 yes: function (index, layero) {
                     layer.msg('发送成功');
