修改导航栏信息

--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -134,8 +134,9 @@
                 </li>
                 <li class="layui-nav-item">
                     <button type="button" class="layui-btn layui-btn-normal"
-                        onclick="javascrtpt:window.location.href='./login.html'"
-                        style="">登录</button>
+                        onclick="javascrtpt:window.location.href='./login.html'">
+                        登录
+                    </button>
                 </li>
             </ul>
        
