--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -96,45 +96,45 @@
                 </li>
 
                 <li class="layui-nav-item ">
-                    <a href="./main.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./main" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-home iconStyle"></i>
                         首页
                     </a>
                 </li>
                 <li class="layui-nav-item">
 
-                    <a href="./businessScope.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./businessScope" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-senior iconStyle"></i>
                         业务范围
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./secondPeople.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./secondPeople" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-username iconStyle"></i>
                         会计师介绍
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./secondClassic.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./secondClassic" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-note iconStyle"></i>
                         经典案例
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./caseInProcess2.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./caseInProcess2" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-survey iconStyle"></i>
                         处理中案例
                     </a>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="./contactInfo.html" class="dhlStyle" target="layui-body-iframe">
+                    <a href="./contactInfo" class="dhlStyle" target="layui-body-iframe">
                         <i class="layui-icon layui-icon-dialogue iconStyle"></i>
                         联系我们
                     </a>
                 </li>
                 <li class="layui-nav-item">
                     <button type="button" class="layui-btn layui-btn-normal"
-                        onclick="javascrtpt:window.location.href='./login.html'">
+                        onclick="javascrtpt:window.location.href='./login'">
                         登录
                     </button>
                 </li>
@@ -151,7 +151,7 @@
     <!-- 内容主体区域 -->
     <div  style="height:90vh;margin:0 auto;text-align: center;">
         <!-- css样式overflow:hidden表示溢出隐藏 -->
-        <iframe src="./main.html" name="layui-body-iframe" marginwidth="0" marginheight="0" scrolling="yes"
+        <iframe src="./main" name="layui-body-iframe" marginwidth="0" marginheight="0" scrolling="yes"
             frameborder="0" height="100%" width="100%" >
             
         </iframe>
