--- a/caseInProcess3.html
+++ b/caseInProcess3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>处理中案例</title>
 
-    <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="layui/css/layui.css">
 
     <style type="text/css">
         /**
@@ -87,7 +87,7 @@
 </head>
 <body>
 
-<script src="/layui/layui.js"></script>
+<script src="layui/layui.js"></script>
 
 <div style="width:90%;text-align: center;margin: 0 auto;">
         <ul class="layui-nav layui-nav-tree"  lay-filter="test"style="float:left;text-align:center;margin:0 auto;background-color: #FFFFFF" >
