--- a/contactInfo.html
+++ b/contactInfo.html
@@ -8,7 +8,7 @@
 
 
 
-<link rel="stylesheet" href="layui/css/layui.css">
+<link rel="stylesheet" href="/layui/css/layui.css">
 
 <style type="text/css">
     /**
@@ -88,7 +88,7 @@
 </head>
 <body>
 
-<script src="layui/layui.js"></script>
+<script src="/layui/layui.js"></script>
 
 <div style="width:90%;text-align: center;margin: 0 auto;">
 	
@@ -99,13 +99,13 @@
             联系我们
         </div>
         <hr class="layui-bg-black" style="margin:0 auto">
-        <li class="layui-nav-item"   ><a href="./thirdInfo_addr.html" target="contactIframe">地址</a></li>
+        <li class="layui-nav-item"   ><a href="./thirdInfo_addr" target="contactIframe">地址</a></li>
         <hr class="layui-bg-black" style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_email.html"target="contactIframe">电子邮箱</a></li>
+        <li class="layui-nav-item"><a href="./thirdInfo_email"target="contactIframe">电子邮箱</a></li>
         <hr class="layui-bg-black"style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_tel.html"target="contactIframe">联系电话</a></li>
+        <li class="layui-nav-item"><a href="./thirdInfo_tel"target="contactIframe">联系电话</a></li>
         <hr class="layui-bg-black"style="margin:0 auto">
-        <li class="layui-nav-item"><a href="./thirdInfo_qq.html"target="contactIframe">QQ/微信</a></li>
+        <li class="layui-nav-item"><a href="./thirdInfo_qq"target="contactIframe">QQ/微信</a></li>
         <hr class="layui-bg-black"style="margin:0 auto">
 
 
@@ -114,7 +114,7 @@
     <div  style="height:90vh;margin:0 auto;text-align: center;">
 
         <!-- css样式overflow:hidden表示溢出隐藏 -->
-       <iframe src="./thirdInfo_addr.html" name="contactIframe" marginwidth="0" marginheight="0" scrolling="yes"
+       <iframe src="./thirdInfo_addr" name="contactIframe" marginwidth="0" marginheight="0" scrolling="yes"
             frameborder="0" height="100%" width="100%" >
             
         </iframe>
@@ -133,4 +133,4 @@
 </body>
 </html>
 
-<script src="static/script/jquery.min.js"></script>
+<script src="/static/script/jquery.min.js"></script>
