--- a/WebTemplate.html
+++ b/WebTemplate.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>湖南华晟会计师事务所</title>
-    <link rel="stylesheet" href="layui/css/layui.css">
-	<script src="layui/layui.js"></script>
-	<script src="js/jquery.min.js"></script>
+    <link rel="stylesheet" href="/layui/css/layui.css">
+	<script src="/layui/layui.js"></script>
+	<script src="/js/jquery.min.js"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <style type="text/css">
