--- a/main.html
+++ b/main.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>湖南华晟会计师事务所</title>
-    <link rel="stylesheet" href="/layui/css/layui.css">
-	<link rel="stylesheet" href="/layui/css/modules/layer/default/layer.css">
-	<script src="/layui/layui.js"></script>
-	<script src="/js/jquery.min.js"></script>
-	<script src="/layui/lay/modules/layer.js"></script>
+    <link rel="stylesheet" href="layui/css/layui.css">
+	<link rel="stylesheet" href="layui/css/modules/layer/default/layer.css">
+	<script src="layui/layui.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="layui/lay/modules/layer.js"></script>
     <script src="https://unpkg.com/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script> 
     <style type="text/css">
@@ -97,16 +97,16 @@
 
                     <div carousel-item>
                         <div style="text-align: center;">
-                            <img src="/img/banner1.jpg" style="width: 100%;">
+                            <img src="img/banner1.jpg" style="width: 100%;">
                         </div>
                         <div style="text-align: center;">
-                            <img src="/img/banner2.jpg" style="width: 100%;">
+                            <img src="img/banner2.jpg" style="width: 100%;">
                         </div>
                         <div style="text-align: center;">
-                            <img src="/img/banner3.jpg" style="width: 100%;">
+                            <img src="img/banner3.jpg" style="width: 100%;">
                         </div>
                         <div style="text-align: center;">
-                            <img src="/img/banner4.jpg" style="width: 100%;">
+                            <img src="img/banner4.jpg" style="width: 100%;">
                         </div>
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset2">
                                     <a href="#">
                                         <div class="box clzalbStyle">
-                                            <img src="/img/CaseInProcess1.jpg" style="width: 250px;"><br>
+                                            <img src="img/CaseInProcess1.jpg" style="width: 250px;"><br>
                                             处理中案例一
                                         </div>
                                         <style>
@@ -292,7 +292,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset3">
                                     <a href="#">
                                         <div class="box clzalbStyle">
-                                            <img src="/img/CaseInProcess2.jpg" style="width: 250px;"><br>
+                                            <img src="img/CaseInProcess2.jpg" style="width: 250px;"><br>
                                             处理中案例二
                                         </div>
                                         <style>
@@ -310,7 +310,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset5">
                                     <a href="#">
                                         <div class="box clzalbStyle">
-                                            <img src="/img/CaseInProcess3.jpg" style="width: 250px; height: 190px;"><br>
+                                            <img src="img/CaseInProcess3.jpg" style="width: 250px; height: 190px;"><br>
                                             处理中案例三
                                         </div>
                                         <style>
@@ -362,7 +362,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset2">
                                     <a href="#">
                                         <div class="box jdanbStyle">
-                                            <img src="/img/people1.jpg" style="width: 250px;"><br>
+                                            <img src="img/people1.jpg" style="width: 250px;"><br>
                                             会计师1
                                         </div>
                                         <style>
@@ -380,7 +380,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset3">
                                     <a href="#">
                                         <div class="box jdanbStyle">
-                                            <img src="/img/people2.jpg" style="width: 250px;"><br>
+                                            <img src="img/people2.jpg" style="width: 250px;"><br>
                                             会计师2
                                         </div>
                                         <style>
@@ -398,7 +398,7 @@
                                 <div class="layui-col-md3 layui-col-md-offset5">
                                     <a href="#">
                                         <div class="box jdanbStyle">
-                                            <img src="/img/people3.jpg" style="width: 250px;">
+                                            <img src="img/people3.jpg" style="width: 250px;">
                                             <br>
                                             会计师3
                                         </div>
