--- a/secondPeople.html
+++ b/secondPeople.html
@@ -88,7 +88,7 @@
 </head>
 <body>
 
-<script src="/layui/layui.js"></script>
+<script src="layui/layui.js"></script>
 
 <div style="width:90%;text-align: center;margin: 0 auto;">
 
@@ -128,7 +128,7 @@
 
             </div>
             <div class="boxr">
-                <img src="/img/Classic.jpg" style="width: 350px;">
+                <img src="img/Classic.jpg" style="width: 350px;">
             </div>
         </div>
         <br>
@@ -138,7 +138,7 @@
                 <h3 style="text-align: left;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h3>
             </div>
             <div class="boxr">
-                <img src="/img/Classic.jpg" style="width: 350px;">
+                <img src="img/Classic.jpg" style="width: 350px;">
             </div>
         </div>
         <br>
@@ -148,7 +148,7 @@
                 <h3 style="text-align: left;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h3>
             </div>
             <div class="boxr">
-                <img src="/img/Classic.jpg" style="width: 350px;">
+                <img src="img/Classic.jpg" style="width: 350px;">
             </div>
         </div>
         <nav style="text-align: center;padding: 30px;">
@@ -172,4 +172,4 @@
 </body>
 </html>
 
-<script src="/js/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
