--- a/businessScope.html
+++ b/businessScope.html
@@ -87,7 +87,7 @@
 </head>
 <body style="width:90%;margin: 0 auto;">
 
-<script src="/layui/layui.js"></script>
+<script src="layui/layui.js"></script>
 
 </script>
 
@@ -169,4 +169,4 @@
 </body>
 </html>
 
-<script src="/js/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
