--- a/contactInfo.html
+++ b/contactInfo.html
@@ -8,7 +8,7 @@
 
 
 
-<link rel="stylesheet" href="/layui/css/layui.css">
+<link rel="stylesheet" href="layui/css/layui.css">
 
 <style type="text/css">
     /**
@@ -88,7 +88,7 @@
 </head>
 <body>
 
-<script src="/layui/layui.js"></script>
+<script src="layui/layui.js"></script>
 
 <div style="width:90%;text-align: center;margin: 0 auto;">
 	
@@ -133,4 +133,4 @@
 </body>
 </html>
 
-<script src="/static/script/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
