--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="/layui/css/reset.css">
-    <link rel="stylesheet" href="/layui/css/layui.css" media="all">
+    <link rel="stylesheet" href="layui/css/reset.css">
+    <link rel="stylesheet" href="layui/css/layui.css" media="all">
     <style>
         body {
             background-color: skyblue;
@@ -102,7 +102,7 @@
     </form>
 
 
-    <script src="/layui/layui.js" charset="utf-8"></script>
+    <script src="layui/layui.js" charset="utf-8"></script>
     <script>
         layui.use(['form', 'layedit', 'laydate'], function () {
             var form = layui.form
