--- a/peopleIntro.html
+++ b/peopleIntro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>会计师介绍</title>
 
-    <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="layui/css/layui.css">
 
     <style type="text/css">
         /**
@@ -85,7 +85,7 @@
 </head>
 <body>
 
-<script src="/layui/layui.js"></script>
+<script src="layui/layui.js"></script>
 
 <div class="layui-side layui-bg-black">
     <div class="layui-side-scroll">
@@ -115,7 +115,7 @@
                 <h5>简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h5>
             </div>
             <div class="boxr">
-                <img src="/img/people1.jpg" style="width: 250px;">
+                <img src="img/people1.jpg" style="width: 250px;">
             </div>
         </div>
         
@@ -125,4 +125,4 @@
 </body>
 </html>
 
-<script src="/js/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
