--- a/secondClassic.html
+++ b/secondClassic.html
@@ -88,7 +88,7 @@
 </head>
 <body>
 
-<script src="/layui/layui.js"></script>
+<script src="layui/layui.js"></script>
 
 <div style="width:90%;text-align: center;margin: 0 auto;">
         <ul class="layui-nav layui-nav-tree layui-nav-side"  lay-filter="test"style="float:left;text-align:center;margin:0 auto;background-color: #FFFFFF" >
@@ -116,7 +116,7 @@
                 <h3 style="text-align: left;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h3>
             </div>
             <div class="boxr">
-                <img src="/img/Classic.jpg" style="width: 350px;">
+                <img src="img/Classic.jpg" style="width: 350px;">
             </div>
         </div>
         <br>
@@ -127,7 +127,7 @@
 
             </div>
             <div class="boxr">
-                <img src="/img/Classic.jpg" style="width: 350px;">
+                <img src="img/Classic.jpg" style="width: 350px;">
             </div>
         </div>
         <br>
@@ -137,7 +137,7 @@
                 <h3 style="text-align: left;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h3>
             </div>
             <div class="boxr">
-                <img src="/img/Classic.jpg" style="width: 350px;">
+                <img src="img/Classic.jpg" style="width: 350px;">
             </div>
         </div>
         <br>
@@ -147,7 +147,7 @@
                 <h3 style="text-align: left;">简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介简介</h3>
             </div>
             <div class="boxr">
-                <img src="/img/Classic.jpg" style="width: 350px;">
+                <img src="img/Classic.jpg" style="width: 350px;">
             </div>
         </div>
         <nav style="text-align: center;padding: 30px;">
@@ -171,4 +171,4 @@
 </body>
 </html>
 
-<script src="/js/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
