--- a/thirdBusinessScope2.html
+++ b/thirdBusinessScope2.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="stylesheet" href="/layui/css/layui.css">
+<link rel="stylesheet" href="layui/css/layui.css">
 
 <style type="text/css">
     /**
@@ -98,7 +98,7 @@
 
 <body>
 
-    <script src="/layui/layui.js"></script>
+    <script src="layui/layui.js"></script>
 
     <div style="width:100%;text-align: center;margin: 0 auto;">
 
@@ -137,4 +137,4 @@
 
 </html>
 
-<script src="/static/script/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
