--- a/thirdInfo_qq.html
+++ b/thirdInfo_qq.html
@@ -95,7 +95,7 @@
    
 
     <div style="background-color:#EEEEEE;height:500px;margin-top: 20px;margin-left: 220px">
-        <img src="img/caseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
+        <img src="img/CaseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
         <h1 style="padding: 20px"> QQ/微信 </h1>
         <div style="text-align: left">
             <h3>
@@ -118,4 +118,4 @@
 </body>
 </html>
 
-<script src="static/script/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
