--- a/thirdInfo_tel.html
+++ b/thirdInfo_tel.html
@@ -104,7 +104,7 @@
 
       
         <div style="background-color:#EEEEEE;height:500px;margin-top: 20px;margin-left: 220px">
-            <img src="img/caseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
+            <img src="img/CaseInProcess1.jpg" style="float:left;margin: 20px 20px;width:300px">
             <h1 style="padding: 20px"> 联系电话 </h1>
             <div style="text-align: left">
                 <h3>
@@ -128,4 +128,4 @@
 
 </html>
 
-<script src="static/script/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
